--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   # For drift
   sqlite3_flutter_libs: ^0.5.24
   stream_transform: ^2.1.0
+  super_sliver_list: ^0.4.1
   surf_lint_rules: ^3.1.0
   talker: ^4.4.0
   talker_flutter: ^4.4.0
