--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,13 +21,13 @@ dependencies:
   collection: any
   cookie_jar: ^4.0.8
   dart_mappable: 4.2.2
-  device_info_plus: ^10.1.1
-  dio: ^5.5.0+1
+  device_info_plus: ^10.1.2
+  dio: ^5.6.0
   dio_cookie_manager: ^3.1.1
   drift: ^2.19.1+1
   # For drift
   drift_dev: ^2.19.1
-  drift_flutter: ^0.1.0
+  drift_flutter: ^0.2.0
   easy_refresh: ^3.4.0
   equatable: ^2.0.5
   extended_nested_scroll_view: ^6.2.1
@@ -39,7 +39,7 @@ dependencies:
   flutter_bloc: ^8.1.6
   flutter_localizations:
     sdk: flutter
-  flutter_markdown: ^0.7.3
+  flutter_markdown: ^0.7.3+1
   flutter_svg: ^2.0.10+1
   font_awesome_flutter: ^10.7.0
   get_it: ^7.7.0
@@ -57,17 +57,20 @@ dependencies:
   slang: ^3.31.1
   slang_flutter: ^3.31.0
   # For drift
+  # Blocked by web < 1.0.0
   sqlite3: ^2.4.5
   # For drift
   sqlite3_flutter_libs: ^0.5.24
   stream_transform: ^2.1.0
   super_sliver_list: ^0.4.1
   surf_lint_rules: ^3.1.0
+  # Blocked by shared_plus > web < 1.0.0
   talker: ^4.4.0
   talker_flutter: ^4.4.0
   universal_html: ^2.2.4
   url_launcher: ^6.3.0
   uuid: ^4.4.2
+  # Blocked by flutter_bbcode_editor > flutter_quill > super_clipboard > super_native_extensions
   web: ^0.5.1
   widget_zoom: ^0.0.4
 
