--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_markdown: ^0.7.3+1
   flutter_svg: ^2.0.10+1
   font_awesome_flutter: ^10.7.0
+  fpdart: ^1.1.0
   get_it: ^7.7.0
   gitsumu: ^0.5.0
   go_router: ^14.2.3
