--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,13 +3,13 @@ description: 天使动漫论坛第三方跨平台客户端
 repository: https://github.com/realth000/tsdm_client
 homepage: https://github.com/realth000/tsdm_client
 issue_tracker: https://github.com/realth000/tsdm_client/issues
-publish_to: 'none'
+publish_to: "none"
 
 version: 1.0.0-alpha.2+21
 
 environment:
   flutter: ">=3.24.0 <4.0.0"
-  sdk: '>=3.5.0 <4.0.0'
+  sdk: ">=3.5.0 <4.0.0"
 
 dependencies:
   # Workaround for dart_mappable build issue
@@ -44,7 +44,7 @@ dependencies:
   font_awesome_flutter: ^10.7.0
   fpdart: ^1.1.0
   get_it: ^7.7.0
-  gitsumu: ^0.5.0
+  gitsumu: ^0.5.1
   go_router: ^14.2.3
   html: ^0.15.4
   json_annotation: ^4.9.0
@@ -113,4 +113,3 @@ flutter_launcher_icons:
   web:
     generate: true
     image_path: "assets/images/tsdm_client-large-300x300.png"
-
