fix(*): Fix failed to load br compressed image from web request
Some contents (images) in web response is compressed in br format and
dio has no support of that format so the response data is considered
as invalid image data.

This commit added a package to decompress response data when is in br
format.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   dart_mappable: 4.2.2
   device_info_plus: ^10.1.2
   dio: ^5.6.0
+  dio_brotli_transformer: ^2.0.0
   dio_cookie_manager: ^3.1.1
   drift: ^2.19.1+1
   # For drift
