--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,9 +25,9 @@ dependencies:
   dio: ^5.6.0
   dio_brotli_transformer: ^2.0.0
   dio_cookie_manager: ^3.1.1
-  drift: ^2.19.1+1
+  drift: ^2.20.0
   # For drift
-  drift_dev: ^2.19.1
+  drift_dev: ^2.20.1
   drift_flutter: ^0.2.0
   easy_refresh: ^3.4.0
   equatable: ^2.0.5
@@ -46,34 +46,34 @@ dependencies:
   fpdart: ^1.1.0
   get_it: ^7.7.0
   gitsumu: ^0.5.1
-  go_router: ^14.2.3
+  go_router: ^14.2.7
   html: ^0.15.4
   json_annotation: ^4.9.0
   material_design_icons_flutter: ^7.0.7296
   path: any
   path_provider: ^2.1.4
   permission_handler: ^11.3.1
-  responsive_framework: ^1.4.0
+  responsive_framework: ^1.5.1
   rxdart: ^0.28.0
   shimmer: ^3.0.0
-  slang: ^3.31.1
+  slang: ^3.31.2
   slang_flutter: ^3.31.0
   # For drift
   # Blocked by web < 1.0.0
-  sqlite3: ^2.4.5
+  sqlite3: ^2.4.6
   # For drift
   sqlite3_flutter_libs: ^0.5.24
   stream_transform: ^2.1.0
   super_sliver_list: ^0.4.1
   surf_lint_rules: ^3.1.0
   # Blocked by shared_plus > web < 1.0.0
-  talker: ^4.4.0
-  talker_flutter: ^4.4.0
+  talker: ^4.4.1
+  talker_flutter: ^4.4.1
   universal_html: ^2.2.4
   url_launcher: ^6.3.0
   uuid: ^4.4.2
   # Blocked by flutter_bbcode_editor > flutter_quill > super_clipboard > super_native_extensions
-  web: ^0.5.1
+  web: ^1.0.0
   widget_zoom: ^0.0.4
 
 dev_dependencies:
