chore(android): Updare Android build toolchain
* Update target sdk and compile sdk to 35
* Update Android NDK to 27+
* Update gradle to 8.10 and agp to 8.5
* Update kotlin to 2.0.10

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -30,8 +30,10 @@ if (keystorePropertiesFile.exists()) {
 
 
 android {
-    compileSdkVersion 34
-    ndkVersion flutter.ndkVersion
+    namespace = "kzs.th000.tsdm_client"
+    compileSdkVersion 35
+    // ndkVersion flutter.ndkVersion
+    ndkVersion "27.0.12077973"
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -55,7 +57,7 @@ android {
         // webview_flutter_android acquires minSdkVersion >= 19, restore this when no longer use it.
         // minSdkVersion flutter.minSdkVersion
         minSdkVersion 23
-        targetSdkVersion 34
+        targetSdkVersion 35
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
