--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -90,9 +90,13 @@ dev_dependencies:
   slang_build_runner: ^3.31.0
   very_good_analysis: ^6.0.0
 
-#  dependency_overrides:
-#    # Blocked by custom_lint 0.5.3 and flutter_test
-#    uuid: ^4.2.1
+# https://github.com/pichillilorenzo/flutter_inappwebview/issues/2193#issuecomment-2208626280
+dependency_overrides:
+  flutter_inappwebview_android:
+    git:
+      url: https://github.com/holzgeist/flutter_inappwebview
+      path: flutter_inappwebview_android
+      ref: d89b1d32638b49dfc58c4b7c84153be0c269d057
 
 flutter:
   uses-material-design: true
