feat(editor): Collapse toolbar on mobile  platforms
* Collapse editor toolbar on mobile platforms.
* Expanded toolbar now placed in keyboard area, to make editor larger.

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,6 +3,8 @@ allprojects {
     repositories {
         google()
         mavenCentral()
+        // Requires by chat_bottom_container
+        maven { url 'https://jitpack.io' }
     }
 }
 
