--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   ansicolor: any
   bbob_dart: ^0.2.1
   bloc: ^8.1.4
+  chat_bottom_container: ^0.2.0
   # Blocked by flutter
   collection: any
   cookie_jar: ^4.0.8
