--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ dependencies:
   stream_transform: ^2.1.0
   super_sliver_list: ^0.4.1
   surf_lint_rules: ^3.1.0
+  system_theme: ^3.1.1
   talker: ^4.4.1
   talker_flutter: ^4.4.1
   universal_html: ^2.2.4
