--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
   dio: ^5.7.0
   dio_brotli_transformer: ^2.0.0
   dio_cookie_manager: ^3.1.1
-  drift: ^2.20.2
+  drift: ^2.20.3
   # For drift
   drift_dev: ^2.20.3
   drift_flutter: ^0.2.0
@@ -40,13 +40,13 @@ dependencies:
   flutter_bloc: ^8.1.6
   flutter_localizations:
     sdk: flutter
-  flutter_markdown: ^0.7.3+1
+  flutter_markdown: ^0.7.3+2
   flutter_svg: ^2.0.10+1
   font_awesome_flutter: ^10.7.0
   fpdart: ^1.1.0
   get_it: ^8.0.0
   gitsumu: ^0.5.1
-  go_router: ^14.2.7
+  go_router: ^14.2.8
   html: ^0.15.4
   json_annotation: ^4.9.0
   material_design_icons_flutter: ^7.0.7296
@@ -75,12 +75,13 @@ dependencies:
   talker_flutter: ^4.4.1
   universal_html: ^2.2.4
   url_launcher: ^6.3.0
-  uuid: ^4.5.0
-  web: ^1.0.0
+  uuid: ^4.5.1
+  web: ^1.1.0
   widget_zoom: ^0.0.4
 
 dev_dependencies:
   build_runner: ^2.4.12
+  custom_lint: ^0.6.7
   dart_mappable_builder:
     git:
       url: https://github.com/schultek/dart_mappable.git
@@ -90,16 +91,9 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   json_serializable: ^6.8.0
+  pyramid_lint: ^2.0.1
   slang_build_runner: ^3.31.0
   very_good_analysis: ^6.0.0
-
-# https://github.com/pichillilorenzo/flutter_inappwebview/issues/2193#issuecomment-2208626280
-dependency_overrides:
-  flutter_inappwebview_android:
-    git:
-      url: https://github.com/holzgeist/flutter_inappwebview
-      path: flutter_inappwebview_android
-      ref: d89b1d32638b49dfc58c4b7c84153be0c269d057
 
 flutter:
   uses-material-design: true
