--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,6 +78,7 @@ dependencies:
   uuid: ^4.5.1
   web: ^1.1.0
   widget_zoom: ^0.0.4
+  window_manager: ^0.4.2
 
 dev_dependencies:
   build_runner: ^2.4.12
