--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ environment:
 dependencies:
   # Workaround for dart_mappable build issue
   ansicolor: any
+  args: ^2.5.0
   bbob_dart: ^0.2.1
   bloc: ^8.1.4
   chat_bottom_container: ^0.2.0
