--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flex_color_scheme: ^7.3.1
   flutter:
     sdk: flutter
+  flutter_avif: ^2.4.1
   flutter_bbcode_editor:
     path: ./packages/flutter_bbcode_editor
   flutter_bloc: ^8.1.6
