--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
   easy_refresh: ^3.4.0
   equatable: ^2.0.5
   extended_nested_scroll_view: ^6.2.1
-  flex_color_scheme: ^7.3.1
+  flex_color_scheme: ^8.0.0-dev.1
   flutter:
     sdk: flutter
   flutter_avif: ^2.4.1
