--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,41 +14,42 @@ environment:
 dependencies:
   # Workaround for dart_mappable build issue
   ansicolor: any
-  args: ^2.5.0
+  args: ^2.6.0
   bbob_dart: ^0.2.1
   bloc: ^8.1.4
-  chat_bottom_container: ^0.2.0
+  chat_bottom_container: ^0.2.1
   # Blocked by flutter
   collection: any
   cookie_jar: ^4.0.8
-  dart_mappable: 4.2.2
-  device_info_plus: ^10.1.2
+  dart_mappable: ^4.3.0
+  # Blocked by super_clipboard
+  device_info_plus: ^10.0.3
   dio: ^5.7.0
   dio_brotli_transformer: ^2.0.0
   dio_cookie_manager: ^3.1.1
-  drift: ^2.20.3
+  drift: ^2.21.0
   # For drift
-  drift_dev: ^2.20.3
-  drift_flutter: ^0.2.0
+  drift_dev: ^2.21.0
+  drift_flutter: ^0.2.1
   easy_refresh: ^3.4.0
   equatable: ^2.0.5
   extended_nested_scroll_view: ^6.2.1
   flex_color_scheme: ^8.0.0-dev.1
   flutter:
     sdk: flutter
-  flutter_avif: ^2.4.1
+  flutter_avif: ^2.5.0
   flutter_bbcode_editor:
     path: ./packages/flutter_bbcode_editor
   flutter_bloc: ^8.1.6
   flutter_localizations:
     sdk: flutter
-  flutter_markdown: ^0.7.3+2
+  flutter_markdown: ^0.7.4
   flutter_svg: ^2.0.10+1
   font_awesome_flutter: ^10.7.0
   fpdart: ^1.1.0
   get_it: ^8.0.0
   gitsumu: ^0.5.1
-  go_router: ^14.2.8
+  go_router: ^14.3.0
   html: ^0.15.4
   json_annotation: ^4.9.0
   material_design_icons_flutter: ^7.0.7296
@@ -58,44 +59,40 @@ dependencies:
   responsive_framework: ^1.5.1
   rxdart: ^0.28.0
   shimmer: ^3.0.0
-  slang: ^3.31.2
-  slang_flutter: ^3.31.0
+  slang: ^4.0.0
+  slang_flutter: ^4.0.0
   # For drift
-  sqlite3: ^2.4.6
+  sqlite3: ^2.4.7
   # For drift
-  sqlite3_flutter_libs: ^0.5.24
+  sqlite3_flutter_libs: ^0.5.25
   stream_transform: ^2.1.0
   super_sliver_list: ^0.4.1
   surf_lint_rules: ^3.1.0
-  # system_theme: ^3.1.1
-  system_theme:
-    git:
-      url: https://github.com/realth000/system_theme
-      ref: 5f2c5b5a8aaf88be07e34dcbc8e53885edfef675
-      path: system_theme
+  system_theme: ^3.1.2
   talker: ^4.4.1
   talker_flutter: ^4.4.1
   universal_html: ^2.2.4
-  url_launcher: ^6.3.0
+  url_launcher: ^6.3.1
   uuid: ^4.5.1
   web: ^1.1.0
   widget_zoom: ^0.0.4
   window_manager: ^0.4.2
 
 dev_dependencies:
-  build_runner: ^2.4.12
-  custom_lint: ^0.6.7
-  dart_mappable_builder:
-    git:
-      url: https://github.com/schultek/dart_mappable.git
-      path: "packages/dart_mappable_builder"
-      ref: 4777e79cdc99e15730d18990e1d774edc0064b0a
+  build_runner: ^2.4.13
+  # Blocked by flutter_l18n, analyzer and collection
+  custom_lint: ^0.6.8
+  dart_mappable_builder: ^4.3.0
+  # git:
+  #   url: https://github.com/schultek/dart_mappable.git
+  #   path: "packages/dart_mappable_builder"
+  #   ref: 4777e79cdc99e15730d18990e1d774edc0064b0a
   flutter_launcher_icons: ^0.14.1
   flutter_test:
     sdk: flutter
   json_serializable: ^6.8.0
   pyramid_lint: ^2.0.1
-  slang_build_runner: ^3.31.0
+  slang_build_runner: ^4.0.0
   very_good_analysis: ^6.0.0
 
 flutter:
