--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,12 +29,12 @@ dependencies:
   dio_cookie_manager: ^3.1.1
   drift: ^2.21.0
   # For drift
-  drift_dev: ^2.21.0
+  drift_dev: ^2.21.2
   drift_flutter: ^0.2.1
   easy_refresh: ^3.4.0
   equatable: ^2.0.5
   extended_nested_scroll_view: ^6.2.1
-  flex_color_scheme: ^8.0.0-dev.1
+  flex_color_scheme: ^8.0.0-dev.2
   flutter:
     sdk: flutter
   flutter_avif: ^2.5.0
@@ -43,11 +43,11 @@ dependencies:
   flutter_bloc: ^8.1.6
   flutter_localizations:
     sdk: flutter
-  flutter_markdown: ^0.7.4
+  flutter_markdown: ^0.7.4+1
   flutter_svg: ^2.0.10+1
   font_awesome_flutter: ^10.7.0
   fpdart: ^1.1.0
-  get_it: ^8.0.0
+  get_it: ^8.0.1
   gitsumu: ^0.5.1
   go_router: ^14.3.0
   html: ^0.15.4
@@ -59,12 +59,12 @@ dependencies:
   responsive_framework: ^1.5.1
   rxdart: ^0.28.0
   shimmer: ^3.0.0
-  slang: ^4.0.0
-  slang_flutter: ^4.0.0
+  slang: ^4.1.0
+  slang_flutter: ^4.1.0
   # For drift
   sqlite3: ^2.4.7
   # For drift
-  sqlite3_flutter_libs: ^0.5.25
+  sqlite3_flutter_libs: ^0.5.26
   stream_transform: ^2.1.0
   super_sliver_list: ^0.4.1
   surf_lint_rules: ^3.1.0
@@ -76,7 +76,7 @@ dependencies:
   uuid: ^4.5.1
   web: ^1.1.0
   widget_zoom: ^0.0.4
-  window_manager: ^0.4.2
+  window_manager: ^0.4.3
 
 dev_dependencies:
   build_runner: ^2.4.13
@@ -92,7 +92,7 @@ dev_dependencies:
     sdk: flutter
   json_serializable: ^6.8.0
   pyramid_lint: ^2.0.1
-  slang_build_runner: ^4.0.0
+  slang_build_runner: ^4.1.0
   very_good_analysis: ^6.0.0
 
 flutter:
