build(*): ignore drift generated files
This commit added drift generated dart files to git ignore and a
scripts to prepare before build.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Ignore drift generated files
+schema_versions.dart
+/test/data/generated_migrations/*
+
 # Not bundle drift web artifacts
 /web/drift_worker.dart.js
 /web/sqlite3.debug.wasm
