--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,7 +31,7 @@ jobs:
         run: |
           git submodule update --init --recursive --force
           flutter pub get
-          dart run build_runner build
+          dart ./Makefile.dart
       - name: Run flutter analyze
         run: |
           flutter analyze --fatal-infos --fatal-warnings lib
