--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   easy_refresh: ^3.4.0
   equatable: ^2.0.5
   extended_nested_scroll_view: ^6.2.1
-  flex_color_scheme: ^8.0.0-dev.2
+  flex_color_scheme: ^8.0.0
   flutter:
     sdk: flutter
   flutter_avif: ^2.5.0
@@ -45,17 +45,17 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_markdown: ^0.7.4+1
-  flutter_svg: ^2.0.10+1
-  font_awesome_flutter: ^10.7.0
-  fpdart: ^1.1.0
-  get_it: ^8.0.1
+  flutter_svg: ^2.0.14
+  font_awesome_flutter: ^10.8.0
+  fpdart: ^1.1.1
+  get_it: ^8.0.2
   gitsumu: ^0.5.1
-  go_router: ^14.3.0
-  html: ^0.15.4
+  go_router: ^14.4.1
+  html: ^0.15.5
   json_annotation: ^4.9.0
   material_design_icons_flutter: ^7.0.7296
   path: any
-  path_provider: ^2.1.4
+  path_provider: ^2.1.5
   permission_handler: ^11.3.1
   responsive_framework: ^1.5.1
   rxdart: ^0.28.0
