--- a/.github/workflows/release_build.yml
+++ b/.github/workflows/release_build.yml
@@ -120,6 +120,7 @@ jobs:
         with:
           flutter-version: ${{env.CI_FLUTTER_VERSION}}
       - name: Precompile
+        shell: pwsh
         run: |
           git submodule update --init --recursive --force
           flutter pub get
