--- a/.github/workflows/test_build.yml
+++ b/.github/workflows/test_build.yml
@@ -39,11 +39,12 @@ on:
 
 env:
   CI_FLUTTER_VERSION: '3.27.0'
+  CI_RUST_VERSION: '1.83.0'
 
 jobs:
-  build-linux-android:
-    name: Build Linux and Android
-    if: ${{ github.event_name == 'push' || inputs.build_linux || inputs.build_android }}
+  build-linux:
+    name: Build Linux
+    if: ${{ github.event_name == 'push' || inputs.build_linux }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -88,6 +89,39 @@ jobs:
         with:
           name: tsdm_client-linux-tarball
           path: build/linux/x64/release/tsdm_client-linux.tar.gz
+  build-android:
+    name: Build Android
+    if: ${{ github.event_name == 'push' || inputs.build_android }}
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - uses: actions/setup-java@v4
+        with:
+          distribution: 'zulu'
+          java-version: '17'
+      - uses: subosito/flutter-action@v2
+        with:
+          flutter-version: ${{env.CI_FLUTTER_VERSION}}
+          cache: true
+      - run: |
+          sudo apt update -y
+          sudo apt install -y ninja-build libgtk-3-dev
+      - uses: dtolnay/rust-toolchain@stable
+        with:
+          toolchain: ${{env.CI_RUST_VERSION}}
+          targets: aarch64-linux-android,armv7-linux-androideabi,x86_64-linux-android
+      - name: Prepare flutter_avif
+        run: |
+          sudo apt install -y make meson
+          cargo install cargo-ndk
+          ./scripts/build-flutter_avif-android.sh
+      - name: Precompile
+        run: |
+          git submodule update --init --recursive --force
+          flutter pub get
+          dart ./Makefile.dart
       - name: Setup Android sign key
         if: ${{ github.event_name == 'push' || inputs.build_android }}
         run: |
