ci(test_build): try pin the correct NDK version

--- a/.github/workflows/test_build.yml
+++ b/.github/workflows/test_build.yml
@@ -115,7 +115,7 @@ jobs:
           targets: aarch64-linux-android,armv7-linux-androideabi,x86_64-linux-android
       - uses: nttld/setup-ndk@v1
         with:
-          ndk-version: r26c
+          ndk-version: r21e
       - name: Prepare flutter_avif
         run: |
           sudo apt install -y make meson
