--- a/.github/workflows/test_build.yml
+++ b/.github/workflows/test_build.yml
@@ -112,7 +112,7 @@ jobs:
       - uses: dtolnay/rust-toolchain@stable
         with:
           toolchain: ${{env.CI_RUST_VERSION}}
-          targets: aarch64-linux-android,armv7-linux-androideabi,x86_64-linux-android
+          targets: aarch64-linux-android,armv7-linux-androideabi,x86_64-linux-android,i686-linux-android
       - uses: nttld/setup-ndk@v1
         id: setup-ndk
         with:
