--- a/.github/workflows/release_build.yml
+++ b/.github/workflows/release_build.yml
@@ -6,8 +6,8 @@ on:
       - 'v*'
 
 env:
-  CI_FLUTTER_VERSION: '3.27.0'
-  # Do NOT remove or rename the variable above, otherwise will break FDroid workflows.
+  CI_FLUTTER_VERSION: '3.27.0' # Do NOT remove or rename the variable otherwise will break FDroid workflows.
+  CI_RUST_VERSION: '1.83.0' # Keep a same rust version on all compile targets.
 
 jobs:
   release:
@@ -37,8 +37,8 @@ jobs:
           omitPrereleaseDuringUpdate: true
           body: '${{ steps.extract-release-notes.outputs.release_notes }}'
 
-  build-linux-android:
-    name: Build Linux and Android
+  build-linux:
+    name: Build Linux
     needs: [ release ]
     runs-on: ubuntu-latest
     permissions:
@@ -85,6 +85,48 @@ jobs:
           omitBodyDuringUpdate: true
           omitPrereleaseDuringUpdate: true
           artifacts: 'build/linux/x64/release/tsdm_client-linux.tar.gz'
+  build-android:
+    name: Build Android
+    needs: [ release ]
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - uses: actions/setup-java@v4
+        with:
+          distribution: 'zulu'
+          java-version: '17'
+      - uses: subosito/flutter-action@v2
+        with:
+          flutter-version: ${{env.CI_FLUTTER_VERSION}}
+          cache: true
+      - run: |
+          sudo apt update -y
+          sudo apt install -y ninja-build libgtk-3-dev
+          git submodule update --init --recursive --force
+      - uses: dtolnay/rust-toolchain@stable
+        with:
+          toolchain: ${{env.CI_RUST_VERSION}}
+          targets: aarch64-linux-android,armv7-linux-androideabi,x86_64-linux-android,i686-linux-android
+      - uses: nttld/setup-ndk@v1
+        id: setup-ndk
+        with:
+          ndk-version: r27c
+      - name: Update NDK path
+        run: |
+          echo "${{ steps.setup-ndk.outputs.ndk-path }}/toolchains/llvm/prebuilt/linux-x86_64/bin" >> $GITHUB_PATH
+      - name: Prepare flutter_avif
+        run: |
+          sudo apt install -y make meson nasm
+          cargo install cargo-ndk
+          ./scripts/build-flutter_avif-android.sh
+      - name: Precompile
+        run: |
+          flutter pub get
+          dart ./Makefile.dart
       - name: Setup Android sign key
         run: |
           echo '${{ secrets.KEYSTORE }}' | base64 --decode > android/app/key.jks
