--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -33,7 +33,7 @@ android {
     namespace = "kzs.th000.tsdm_client"
     compileSdkVersion 35
     // ndkVersion flutter.ndkVersion
-    ndkVersion "27.0.12077973"
+    ndkVersion "27.2.12479018" // r27c, keep using the same version in workflows.
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_17
@@ -133,4 +133,17 @@ dependencies {
 
     // Required by flutter_local_notifications
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.2.2'
+}
+
+// Required by FDroid version policy.
+ext.abiCodes = ["x86_64": 1, "armeabi-v7a": 2, "arm64-v8a": 3]
+import com.android.build.OutputFile
+
+android.applicationVariants.all { variant ->
+    variant.outputs.each { output ->
+        def abiVersionCode = project.ext.abiCodes.get(output.getFilter(OutputFile.ABI))
+        if (abiVersionCode != null) {
+            output.versionCodeOverride = variant.versionCode * 10 + abiVersionCode
+        }
+    }
 }
