--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,15 +22,14 @@ dependencies:
   collection: any
   cookie_jar: ^4.0.8
   dart_mappable: ^4.3.0
-  # Blocked by super_clipboard
-  device_info_plus: ^10.0.3
+  device_info_plus: ^11.2.0
   dio: ^5.7.0
   dio_brotli_transformer: ^2.0.0
   dio_cookie_manager: ^3.1.1
   drift: ^2.22.1
   # For drift
   drift_dev: ^2.22.1
-  drift_flutter: ^0.2.2
+  drift_flutter: ^0.2.3
   easy_refresh: ^3.4.0
   equatable: ^2.0.7
   extended_nested_scroll_view: ^6.2.1
@@ -49,7 +48,7 @@ dependencies:
   flutter_svg: ^2.0.16
   font_awesome_flutter: ^10.8.0
   fpdart: ^1.1.1
-  get_it: ^8.0.2
+  get_it: ^8.0.3
   gitsumu: ^0.5.3
   go_router: ^14.6.2
   html: ^0.15.5
@@ -62,13 +61,13 @@ dependencies:
   responsive_framework: ^1.5.1
   rxdart: ^0.28.0
   shimmer: ^3.0.0
-  slang: ^4.3.0
-  slang_flutter: ^4.3.0
+  slang: ^4.4.0
+  slang_flutter: ^4.4.0
   # For drift
   sqlite3: ^2.5.0
   # For drift
   sqlite3_flutter_libs: ^0.5.27
-  stream_transform: ^2.1.0
+  stream_transform: ^2.1.1
   super_sliver_list: ^0.4.1
   surf_lint_rules: ^3.1.0
   system_theme: ^3.1.2
@@ -82,21 +81,18 @@ dependencies:
   window_manager: ^0.4.3
 
 dev_dependencies:
-  build_runner: ^2.4.13
+  build_runner: ^2.4.14
   # Blocked by flutter_l18n, analyzer and collection
   custom_lint: ^0.6.8
   dart_mappable_builder: ^4.3.0
-  # git:
-  #   url: https://github.com/schultek/dart_mappable.git
-  #   path: "packages/dart_mappable_builder"
-  #   ref: 4777e79cdc99e15730d18990e1d774edc0064b0a
   flutter_launcher_icons: ^0.14.2
   flutter_test:
     sdk: flutter
+  # Blocked by dart_mappable_builder
   json_serializable: ^6.9.0
   pyramid_lint: ^2.0.1
-  slang_build_runner: ^4.3.0
-  very_good_analysis: ^6.0.0
+  slang_build_runner: ^4.4.0
+  very_good_analysis: ^7.0.0
 
 flutter:
   uses-material-design: true
