--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,7 @@ jobs:
           cache: true
       - run: |
           sudo apt update -y
-          sudo apt install -y ninja-build libgtk-3-dev
+          sudo apt install -y ninja-build libgtk-3-dev sqlite3
       - name: Precompile
         run: |
           git submodule update --init --recursive --force
