--- a/.github/workflows/test_build.yml
+++ b/.github/workflows/test_build.yml
@@ -60,7 +60,7 @@ jobs:
           cache: true
       - run: |
           sudo apt update -y
-          sudo apt install -y ninja-build libgtk-3-dev sqlite3
+          sudo apt install -y ninja-build libgtk-3-dev sqlite3 libsqlite3-dev
       - name: Precompile
         run: |
           git submodule update --init --recursive --force
