--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,7 @@ dependencies:
   collection: any
   cookie_jar: ^4.0.8
   dart_mappable: ^4.3.0
-  device_info_plus: ^11.2.0
+  device_info_plus: any
   dio: ^5.7.0
   dio_brotli_transformer: ^2.0.0
   dio_cookie_manager: ^3.1.1
