build(android): disable dependency info required by fdroid

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -122,6 +122,14 @@ android {
             useLegacyPackaging true
         }
     }
+
+    // Required by FDroid
+    dependenciesInfo {
+        // Disables dependency metadata when building APKs.
+        includeInApk = false
+        // Disables dependency metadata when building Android App Bundles.
+        includeInBundle = false
+    }
 }
 
 flutter {
