fix(debug): export log file through file picker
Use file_picker to save log files instead of manually save and write
contents. Fixes various permission issue on Android and, we only intend
to save files under user actions.

This commit also removed the `READ_EXTERNAL_STORAGE` permission as we do
not need it.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   easy_refresh: ^3.4.0
   equatable: ^2.0.7
   extended_nested_scroll_view: ^6.2.1
+  file_picker: ^8.1.7
   flex_color_scheme: ^8.0.2
   flutter:
     sdk: flutter
