--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,18 +19,18 @@ dependencies:
   # Blocked by flutter
   collection: any
   cookie_jar: ^4.0.8
-  dart_mappable: ^4.3.0
-  dio: ^5.7.0
+  dart_mappable: ^4.3.1
+  dio: ^5.8.0+1
   dio_brotli_transformer: ^2.0.0
-  dio_cookie_manager: ^3.1.1
-  drift: ^2.24.0
+  dio_cookie_manager: ^3.2.0
+  drift: ^2.25.0
   # For drift
-  drift_dev: ^2.24.0
+  drift_dev: ^2.25.1
   drift_flutter: ^0.2.4
   easy_refresh: ^3.4.0
   equatable: ^2.0.7
   extended_nested_scroll_view: ^6.2.1
-  file_picker: ^8.1.7
+  file_picker: ^8.3.5
   flex_color_scheme: ^8.1.0
   flutter:
     sdk: flutter
@@ -42,13 +42,13 @@ dependencies:
   flutter_local_notifications: ^18.0.1
   flutter_localizations:
     sdk: flutter
-  flutter_markdown: ^0.7.5
+  flutter_markdown: ^0.7.6+2
   flutter_svg: ^2.0.17
   font_awesome_flutter: ^10.8.0
   fpdart: ^1.1.1
   get_it: ^8.0.3
   gitsumu: ^0.6.0
-  go_router: ^14.7.1
+  go_router: ^14.8.0
   html: ^0.15.5
   image_picker: ^1.1.2
   json_annotation: ^4.9.0
@@ -62,15 +62,15 @@ dependencies:
   slang: ^4.4.1
   slang_flutter: ^4.4.0
   # For drift
-  sqlite3: ^2.7.2
+  sqlite3: ^2.7.3
   # For drift
-  sqlite3_flutter_libs: ^0.5.29
+  sqlite3_flutter_libs: ^0.5.30
   stream_transform: ^2.1.1
   super_sliver_list: ^0.4.1
   surf_lint_rules: ^3.1.0
   system_theme: ^3.1.2
-  talker: ^4.6.6
-  talker_flutter: ^4.6.6
+  talker: ^4.6.11
+  talker_flutter: ^4.6.11
   universal_html: ^2.2.4
   url_launcher: ^6.3.1
   uuid: ^4.5.1
@@ -79,7 +79,7 @@ dependencies:
   window_manager: ^0.4.3
 
 dev_dependencies:
-  build_runner: ^2.4.14
+  build_runner: ^2.4.15
   # Blocked by flutter_l18n, analyzer and collection
   custom_lint: ^0.6.8
   dart_mappable_builder: ^4.3.0
@@ -88,6 +88,7 @@ dev_dependencies:
     sdk: flutter
   # Blocked by dart_mappable_builder
   json_serializable: ^6.9.0
+  # Blocked by dart_mappable_builder
   pyramid_lint: ^2.0.1
   slang_build_runner: ^4.4.2
   very_good_analysis: ^7.0.0
