--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   # Blocked by flutter
   collection: any
   cookie_jar: ^4.0.8
+  dart_bbcode_parser:
+    path: ./packages/dart_bbcode_parser
   dart_mappable: ^4.4.0
   dio: ^5.8.0+1
   dio_brotli_transformer: ^2.0.0
