feat: use external web colors and more bbcode parsing
This commit moved pre-defined web colors and related color utilities
to external package `dart_bbcode_web_colors` because multiple packages
in this project rely on the same functionality.

Besides, update upstream code to get more bbcode parsing support, till
now most frequently used bbcode tags can be recognized and parsed into
quill delta.

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "packages/dart_bbcode_parser"]
 	path = packages/dart_bbcode_parser
 	url = https://github.com/realth000/dart_bbcode_parser.git
+[submodule "packages/dart_bbcode_web_colors"]
+	path = packages/dart_bbcode_web_colors
+	url = git@github.com:realth000/dart_bbcode_web_colors.git
