build: update Android build targets and enable 16kb page size support
* Bump NDK to `r28`
* Bump compile SDK and target SDK to `36`
* Bump kotlin to `2.1.20`
* Bump gradle to `8.13`
* Bump AGP to `8.9.1`
* Bump package `flutter_avif` to support 16kb page size

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -31,9 +31,9 @@ if (keystorePropertiesFile.exists()) {
 
 android {
     namespace = "kzs.th000.tsdm_client"
-    compileSdkVersion 35
+    compileSdkVersion 36
     // ndkVersion flutter.ndkVersion
-    ndkVersion "27.2.12479018" // r27c, keep using the same version in workflows.
+    ndkVersion "28.0.13004108" // r28, keep using the same version in workflows.
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_17
@@ -62,7 +62,7 @@ android {
         // webview_flutter_android acquires minSdkVersion >= 19, restore this when no longer use it.
         // minSdkVersion flutter.minSdkVersion
         minSdkVersion 23
-        targetSdkVersion 35
+        targetSdkVersion 36
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
 
