--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   path: any
   path_provider: ^2.1.5
   permission_handler: ^11.3.1
+  photo_view: ^0.15.0
   responsive_framework: ^1.5.1
   rxdart: ^0.28.0
   shimmer: ^3.0.0
@@ -80,7 +81,6 @@ dependencies:
   url_launcher: ^6.3.1
   uuid: ^4.5.1
   web: ^1.1.0
-  widget_zoom: ^0.0.4
   window_manager: ^0.4.3
 
 dev_dependencies:
