--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_markdown: ^0.7.6+2
+  flutter_styled_toast: ^2.2.1
   flutter_svg: ^2.0.17
   font_awesome_flutter: ^10.8.0
   fpdart: ^1.1.1
