--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   args: ^2.6.0
   bbob_dart: ^0.2.1
   bloc: ^9.0.0
-  chat_bottom_container: ^0.3.0
+  chat_bottom_container: ^0.3.1
   # Blocked by flutter
   collection: any
   cookie_jar: ^4.0.8
@@ -23,78 +23,77 @@ dependencies:
     path: ./packages/dart_bbcode_parser
   dart_bbcode_web_colors:
     path: ./packages/dart_bbcode_web_colors
-  dart_mappable: ^4.4.0
+  dart_mappable: ^4.5.0
   dio: ^5.8.0+1
   dio_brotli_transformer: ^2.0.0
   dio_cookie_manager: ^3.2.0
-  drift: ^2.25.1
+  drift: ^2.26.0
   # For drift
-  drift_dev: ^2.25.2
+  drift_dev: ^2.26.0
   drift_flutter: ^0.2.4
   easy_refresh: ^3.4.0
   equatable: ^2.0.7
   extended_nested_scroll_view: ^6.2.1
-  file_picker: ^9.0.0
+  file_picker: ^10.1.2
   flex_color_picker: ^3.7.0
-  flex_color_scheme: ^8.1.1
+  flex_color_scheme: ^8.2.0
   flutter:
     sdk: flutter
   flutter_avif:
     path: ./packages/flutter_avif/flutter_avif
   flutter_bbcode_editor:
     path: ./packages/flutter_bbcode_editor
-  flutter_bloc: ^9.0.0
-  flutter_local_notifications: ^18.0.1
+  flutter_bloc: ^9.1.0
+  flutter_local_notifications: ^19.1.0
   flutter_localizations:
     sdk: flutter
-  flutter_markdown: ^0.7.6+2
+  flutter_markdown: ^0.7.7
   flutter_styled_toast: ^2.2.1
-  flutter_svg: ^2.0.17
+  flutter_svg: ^2.1.0
   font_awesome_flutter: ^10.8.0
   fpdart: ^1.1.1
   get_it: ^8.0.3
   gitsumu: ^0.7.0
-  go_router: ^14.8.0
-  html: ^0.15.5
+  go_router: ^15.0.0
+  html: ^0.15.5+1
   image_picker: ^1.1.2
   json_annotation: ^4.9.0
   material_design_icons_flutter: ^7.0.7296
   material_symbols_icons: ^4.2811.0
   path: any
   path_provider: ^2.1.5
-  permission_handler: ^11.3.1
+  permission_handler: ^11.4.0
   photo_view: ^0.15.0
   responsive_framework: ^1.5.1
   rxdart: ^0.28.0
   shimmer: ^3.0.0
-  slang: ^4.4.1
-  slang_flutter: ^4.4.0
+  slang: ^4.7.1
+  slang_flutter: ^4.7.0
   # For drift
-  sqlite3: ^2.7.4
+  sqlite3: ^2.7.5
   # For drift
-  sqlite3_flutter_libs: ^0.5.30
+  sqlite3_flutter_libs: ^0.5.32
   stream_transform: ^2.1.1
   super_sliver_list: ^0.4.1
-  surf_lint_rules: ^3.1.0
   system_theme: ^3.1.2
-  talker: ^4.6.12
-  talker_flutter: ^4.6.12
+  talker: ^4.7.2
+  talker_flutter: ^4.7.2
   universal_html: ^2.2.4
   url_launcher: ^6.3.1
   uuid: ^4.5.1
-  web: ^1.1.0
+  web: ^1.1.1
   window_manager: ^0.4.3
 
 dev_dependencies:
   build_runner: ^2.4.15
-  custom_lint: ^0.7.3
-  dart_mappable_builder: ^4.4.0
+  custom_lint: ^0.7.5
+  dart_mappable_builder: ^4.5.0
   flutter_launcher_icons: ^0.14.3
   flutter_test:
     sdk: flutter
   json_serializable: ^6.9.4
-  pyramid_lint: ^2.0.2
-  slang_build_runner: ^4.4.2
+  pyramid_lint: ^2.0.3
+  slang_build_runner: ^4.7.0
   very_good_analysis: ^7.0.0
 
 flutter:
