--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   dart_bbcode_web_colors:
     path: ./packages/dart_bbcode_web_colors
   dart_mappable: ^4.5.0
+  dart_quill_delta: ^10.8.3
   dio: ^5.8.0+1
   dio_brotli_transformer: ^2.0.0
   dio_cookie_manager: ^3.2.0
