--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,15 +28,15 @@ dependencies:
   dio: ^5.8.0+1
   dio_brotli_transformer: ^2.0.0
   dio_cookie_manager: ^3.2.0
-  drift: ^2.26.0
+  drift: ^2.26.1
   # For drift
-  drift_dev: ^2.26.0
+  drift_dev: ^2.26.1
   drift_flutter: ^0.2.4
   easy_refresh: ^3.4.0
   equatable: ^2.0.7
   extended_nested_scroll_view: ^6.2.1
-  file_picker: ^10.1.2
-  flex_color_picker: ^3.7.0
+  file_picker: ^10.1.9
+  flex_color_picker: ^3.7.1
   flex_color_scheme: ^8.2.0
   flutter:
     sdk: flutter
@@ -44,18 +44,18 @@ dependencies:
     path: ./packages/flutter_avif/flutter_avif
   flutter_bbcode_editor:
     path: ./packages/flutter_bbcode_editor
-  flutter_bloc: ^9.1.0
-  flutter_local_notifications: ^19.1.0
+  flutter_bloc: ^9.1.1
+  flutter_local_notifications: ^19.2.1
   flutter_localizations:
     sdk: flutter
-  flutter_markdown: ^0.7.7
+  flutter_markdown: ^0.7.7+1
   flutter_styled_toast: ^2.2.1
   flutter_svg: ^2.1.0
   font_awesome_flutter: ^10.8.0
   fpdart: ^1.1.1
   get_it: ^8.0.3
   gitsumu: ^0.7.0
-  go_router: ^15.0.0
+  go_router: ^15.1.2
   html: ^0.15.5+1
   image_picker: ^1.1.2
   json_annotation: ^4.9.0
@@ -70,16 +70,16 @@ dependencies:
   shimmer: ^3.0.0
   slang: ^4.7.1
   slang_flutter: ^4.7.0
+  smooth_sheets: ^0.11.5
   # For drift
-  smooth_sheets: ^0.11.4
-  sqlite3: ^2.7.5
+  sqlite3: ^2.7.6
   # For drift
-  sqlite3_flutter_libs: ^0.5.32
+  sqlite3_flutter_libs: ^0.5.33
   stream_transform: ^2.1.1
   super_sliver_list: ^0.4.1
   system_theme: ^3.1.2
-  talker: ^4.7.2
-  talker_flutter: ^4.7.2
+  talker: ^4.7.9
+  talker_flutter: ^4.7.9
   universal_html: ^2.2.4
   url_launcher: ^6.3.1
   uuid: ^4.5.1
