feat: add utility widgets for copy contents
This commit added CopyButton and CopyContentDialogs for unified copy
text processing.

CopyButton aims to work in places where not going to show a copy result
snack bar such as in a dialog. Instead of showing snack bar to notify
about the copy action, CopyButton changes button icon.

Added show dialog function providing dialog level convenience for
named and grouped contents, or selectable single message content.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,10 +68,12 @@ dependencies:
   photo_view: ^0.15.0
   responsive_framework: ^1.5.1
   rxdart: ^0.28.0
+  # Blocked by talker.
+  share_plus: ^10.1.4
   shimmer: ^3.0.0
   slang: ^4.7.1
-  smooth_sheets: ^0.11.5
   slang_flutter: ^4.7.0
+  smooth_sheets: ^0.11.5
   system_network_proxy:
     path: ./packages/flutter_system_network_proxy/system_network_proxy
   # For drift
