--- a/.github/workflows/release_build.yml
+++ b/.github/workflows/release_build.yml
@@ -105,7 +105,7 @@ jobs:
           cache: true
       - run: |
           sudo apt update -y
-          sudo apt install -y ninja-build libgtk-3-dev
+          sudo apt install -y ninja-build libgtk-3-dev libssl-dev
           git submodule update --init --recursive --force
       - uses: dtolnay/rust-toolchain@stable
         with:
