--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -90,6 +90,9 @@ dependencies:
   uuid: ^4.5.1
   web: ^1.1.1
   window_manager: ^0.4.3
+  rhttp:
+    path: ./packages/rhttp/rhttp
+  dio_compatibility_layer: ^0.1.0
 
 dev_dependencies:
   build_runner: ^2.4.15
