ci: use prebuilt flutter_avif libs when test building

--- a/.github/workflows/test_build.yml
+++ b/.github/workflows/test_build.yml
@@ -124,7 +124,7 @@ jobs:
         run: |
           sudo apt install -y make meson nasm
           cargo install cargo-ndk@3.5.4 --locked
-          ./scripts/build-flutter_avif-android.sh
+          ./scripts/build-flutter_avif-android.sh --use-prebuilt-libs
         env:
           ANDROID_NDK: ${{ steps.setup-ndk.outputs.ndk-path }}
           ANDROID_NDK_HOME: ${{ steps.setup-ndk.outputs.ndk-path }}
