--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -84,9 +84,10 @@ android {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig signingConfigs.release
-            // ndk {
-            //     abiFilters "arm64-v8a"
-            // }
+            ndk {
+//                abiFilters "arm64-v8a", "armeabi-v7a"
+                abiFilters "arm64-v8a"
+            }
         }
     }
 
