--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -133,8 +133,12 @@ flutter {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
+    // For splash screen Theme.SplashScreen
+    implementation "androidx.core:core-splashscreen:1.2.0-rc01"
+
     // Required by flutter_local_notifications
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.1.4'
+
 }
 
 // Required by FDroid version policy.
