--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -90,6 +90,7 @@ dependencies:
   uuid: ^4.5.1
   web: ^1.1.1
   window_manager: ^0.4.3
+  native_dio_adapter: ^1.4.0
 
 dev_dependencies:
   build_runner: ^2.4.15
