fix(android): explicitly allow http urls
Required by cronet, native http client.

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
     <application
             android:label="天使动漫"
             android:name="${applicationName}"
+            <!-- When using native Cronet http client, http urls shall be handled explicitly -->
+            android:usesCleartextTraffic="true"
             android:icon="@mipmap/ic_launcher">
         <activity
                 android:name=".MainActivity"
