chore: only run strict analysis check manually
Use lightweight analysis options in development for better dart-analyzer
performance and run check manually in `check_strict_analyzing.dart`.

Also applies in CI.

Added flutter_lints lint rules.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,7 +30,7 @@ jobs:
           dart ./Makefile.dart
       - name: Run flutter analyze
         run: |
-          flutter analyze --fatal-infos --fatal-warnings lib
+          dart ./scripts/check_strict_analyzing.dart
       - name: Run flutter test
         run: |
           flutter test
