--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -97,6 +97,7 @@ dev_dependencies:
   custom_lint: ^0.7.5
   dart_mappable_builder: ^4.5.0
   flutter_launcher_icons: ^0.14.3
+  flutter_lints: ^6.0.0
   flutter_test:
     sdk: flutter
   json_serializable: ^6.9.4
