--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -95,6 +95,13 @@ dependencies:
   window_manager: ^0.4.3
   native_dio_adapter: ^1.4.0
 
+dependency_overrides:
+  jni:
+    git:
+      url: https://github.com/realth000/dart-native
+      ref: 8b6e7021f7384628176c6fe90eecea8987c82e36
+      path: pkgs/jni
+
 dev_dependencies:
   build_runner: ^2.4.15
   custom_lint: ^0.7.5
