chore: ignore test data in analyzing

--- a/analysis_options.strict.yaml
+++ b/analysis_options.strict.yaml
@@ -15,6 +15,7 @@ analyzer:
     - lib/**.freezed.dart
     - lib/**.mapper.dart
     - packages/**
+    - test/data/**.dart
 
 formatter:
   page_width: 120
