--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -13,6 +13,7 @@ analyzer:
     - lib/**.freezed.dart
     - lib/**.mapper.dart
     - packages/**
+    - test/data/**.dart
 
 formatter:
   page_width: 120
