--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,9 +13,8 @@ environment:
 
 dependencies:
   args: ^2.6.0
-  bbob_dart: ^0.2.1
   bloc: ^9.0.0
-  chat_bottom_container: ^0.3.1
+  chat_bottom_container: ^0.3.2
   # Blocked by flutter
   collection: any
   cookie_jar: ^4.0.8
@@ -28,14 +27,13 @@ dependencies:
   dio: ^5.8.0+1
   dio_brotli_transformer: ^2.0.0
   dio_cookie_manager: ^3.2.0
-  drift: ^2.26.1
+  drift: ^2.28.0
   # For drift
-  drift_dev: ^2.26.1
-  drift_flutter: ^0.2.4
+  drift_dev: ^2.28.0
+  drift_flutter: ^0.2.5
   easy_refresh: ^3.4.0
   equatable: ^2.0.7
-  extended_nested_scroll_view: ^6.2.1
-  file_picker: ^10.1.9
+  file_picker: ^10.2.0
   flex_color_picker: ^3.7.1
   flex_color_scheme: ^8.2.0
   flutter:
@@ -45,22 +43,22 @@ dependencies:
   flutter_bbcode_editor:
     path: ./packages/flutter_bbcode_editor
   flutter_bloc: ^9.1.1
-  flutter_local_notifications: ^19.2.1
+  flutter_local_notifications: ^19.4.0
   flutter_localizations:
     sdk: flutter
   flutter_markdown: ^0.7.7+1
   flutter_styled_toast: ^2.2.1
-  flutter_svg: ^2.1.0
+  flutter_svg: ^2.2.0
   font_awesome_flutter: ^10.8.0
   fpdart: ^1.1.1
   get_it: ^8.0.3
   gitsumu: ^0.7.0
-  go_router: ^15.1.2
+  go_router: ^15.1.3
   html: ^0.15.5+1
   image_picker: ^1.1.2
   json_annotation: ^4.9.0
   material_design_icons_flutter: ^7.0.7296
-  material_symbols_icons: ^4.2811.0
+  material_symbols_icons: ^4.2815.1
   native_flutter_proxy: ^0.2.3
   path: any
   path_provider: ^2.1.5
@@ -68,50 +66,47 @@ dependencies:
   photo_view: ^0.15.0
   responsive_framework: ^1.5.1
   rxdart: ^0.28.0
-  # Blocked by talker.
-  share_plus: ^10.1.4
+  share_plus: ^11.0.0
   shimmer: ^3.0.0
-  slang: ^4.7.1
+  slang: ^4.7.3
   slang_flutter: ^4.7.0
-  smooth_sheets:
-    git:
-      url: https://github.com/fujidaiti/smooth_sheets.git
-      ref: a8ea0803407c1fb8dca9b3087cf06f5f2ae8a1b8
+  smooth_sheets: ^0.14.0
   system_network_proxy:
     path: ./packages/flutter_system_network_proxy/system_network_proxy
   # For drift
-  sqlite3: ^2.7.6
+  sqlite3: ^2.7.7
   # For drift
-  sqlite3_flutter_libs: ^0.5.33
+  sqlite3_flutter_libs: ^0.5.37
   stream_transform: ^2.1.1
   super_sliver_list: ^0.4.1
   system_theme: ^3.1.2
-  talker: ^4.7.9
-  talker_flutter: ^4.7.9
+  talker: ^4.9.3
+  talker_flutter: ^4.9.3
   universal_html: ^2.2.4
-  url_launcher: ^6.3.1
+  url_launcher: ^6.3.2
   uuid: ^4.5.1
   web: ^1.1.1
   window_manager: ^0.4.3
-  native_dio_adapter: ^1.4.0
+  native_dio_adapter: ^1.5.0
 
 dependency_overrides:
   jni:
     git:
       url: https://github.com/realth000/dart-native
-      ref: 8b6e7021f7384628176c6fe90eecea8987c82e36
+      # 0.14.2
+      ref: ce500ed0953a8767f4c84815195baa9cd121f2dc
       path: pkgs/jni
 
 dev_dependencies:
-  build_runner: ^2.4.15
-  custom_lint: ^0.7.5
+  build_runner: ^2.5.4
+  custom_lint: ^0.7.6
   dart_mappable_builder: ^4.5.0
-  flutter_launcher_icons: ^0.14.3
+  flutter_launcher_icons: ^0.14.4
   flutter_lints: ^6.0.0
   flutter_test:
     sdk: flutter
   json_serializable: ^6.9.4
-  pyramid_lint: ^2.0.3
+  pyramid_lint: ^2.1.0
   slang_build_runner: ^4.7.0
   very_good_analysis: ^7.0.0
 
