--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,10 +35,7 @@ dependencies:
   equatable: ^2.0.7
   file_picker: ^10.3.1
   flex_color_picker: ^3.7.1
-  flex_color_scheme:
-    git:
-      url: https://github.com/rydmike/flex_color_scheme
-      ref: d838cae8a0fbcc663ca0b99ee6fce5f1ae7c163c
+  flex_color_scheme: ^8.3.0
   flutter:
     sdk: flutter
   flutter_avif:
