--- a/.github/workflows/release_build.yml
+++ b/.github/workflows/release_build.yml
@@ -104,6 +104,7 @@ jobs:
           flutter-version: ${{env.CI_FLUTTER_VERSION}}
           cache: true
       - run: |
+          sudo ./scripts/github_free_disk_space.sh
           sudo apt update -y
           sudo apt install -y ninja-build libgtk-3-dev
           git submodule update --init --recursive --force
