--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,8 +57,11 @@ dependencies:
   html: ^0.15.5+1
   image_picker: ^1.1.2
   json_annotation: ^4.9.0
+  loading_indicator_m3e: ^0.1.1
+  m3e_design: ^0.2.1
   material_design_icons_flutter: ^7.0.7296
   material_symbols_icons: ^4.2858.1
+  native_dio_adapter: ^1.5.0
   native_flutter_proxy: ^0.2.3
   path: any
   path_provider: ^2.1.5
@@ -87,7 +90,6 @@ dependencies:
   uuid: ^4.5.1
   web: ^1.1.1
   window_manager: ^0.4.3
-  native_dio_adapter: ^1.5.0
 
 dependency_overrides:
   jni:
