feat: requires flutter 3.38
* Fix lint errors.
* Fix objects not diposed.
* Fix future not awaited or marked unawait.
* Bump dependencies.
* Requires flutter >= 3.38.

--- a/analysis_options.strict.yaml
+++ b/analysis_options.strict.yaml
@@ -68,4 +68,5 @@ custom_lint:
     - proper_from_environment
     - proper_super_dispose
     - proper_super_init_state
+    - specify_icon_button_tooltip
     - use_spacer
