--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -89,6 +89,7 @@ dependencies:
   url_launcher: ^6.3.2
   uuid: ^4.5.2
   web: ^1.1.1
+  wheel_choice: ^1.2.0
   window_manager: ^0.5.1
 
 dependency_overrides:
