revert: remove cronet_http
The cronet_http uses libcronet to handle http requests, it's faster than
original dart http, but also has these cons:

1. Failure in SSL certificate verification. The embeded cronet library
   does not respect all system level certificates or has issues
   verifying certificates, causing SSL handshake failure with requests
   towards forum image storage server. We can not fix it as it ignores
   the global http override on flutter side.
2. Proxy detection not update per request in some environment, makes
   requests keep failing till app restart. We can not fix it as it
   provides no proxy configuration.

These unrecoverable issue stops use from continue on cronet_http, though
we finally received an update about Android 16kb page size support in
October.

This commit removed all cronet_http related implementaion and
configuration in the codebase. From now on, use dart http instead, but
it is not determined because issues about background http requests,
proxy auto detection and requests efficiency still persit, a kotlin
native http client may help, this shall be decided before next release.

--- a/.github/workflows/release_build.yml
+++ b/.github/workflows/release_build.yml
@@ -139,7 +139,7 @@ jobs:
           echo '${{ secrets.KEY_PROPERTIES }}' > android/key.properties
       - name: Build Android
         run: |
-          flutter build apk --release --dart-define=cronetHttpNoPlay=true
+          flutter build apk --release
       - name: Pack Android apk
         run: |
           pushd build/app/outputs/flutter-apk/
